# alphaevo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: README_CN.md  capability_roadmap.md  capability_status.md  competitive_positioning.md  module_tech_specs.md  strategy_hub.md  technical_design.md  trajectory_data_flywheel.md
docs/cookbook/: 01_quick_start.md  02_first_strategy.md  03_understand_dsl.md  04_custom_indicator.md  05_evolution_guide.md  06_real_data_walkthrough.md  07_factor_discovery_walkthrough.md
docs/reports/: showcase_rsi_reversion_real_snapshot.md
scripts/: validate_real_data.py
scripts/experiments/: collect_results.py  run_ablation.py  run_evolution_experiment.py  run_repro_benchmark.py
src/alphaevo/: __init__.py
src/alphaevo/alpha_factory/: __init__.py  factor_store.py  factory.py  sandbox.py  synthesizer.py  validator.py
src/alphaevo/backtest/: __init__.py  condition.py  engine.py  indicators.py  portfolio.py  rules.py
src/alphaevo/cli/: _helpers.py  demo.py  main.py
src/alphaevo/core/: __init__.py  config.py  llm.py
src/alphaevo/data/: __init__.py  adapter.py  cache.py  universe.py
src/alphaevo/evaluator/: __init__.py  advice.py  benchmark.py  metrics.py  reporter.py
src/alphaevo/models/: __init__.py  enums.py  execution.py  market.py  strategy.py
src/alphaevo/optimizer/: __init__.py  exit.py  joint.py  params.py  summary.py
src/alphaevo/orchestrator/: __init__.py  curriculum.py  evolution.py  islands.py  pipeline.py
src/alphaevo/reflection/: __init__.py  analyzer.py  critic.py  experience.py  meta_learner.py  mutator.py  playbook.py
src/alphaevo/research_committee/: analysts.py
src/alphaevo/research_log/: __init__.py  context.py  logger.py  renderer.py  trajectory.py
strategies/builtin/: event_driven_breakout.yaml  ma_crossover.yaml  mean_reversion_oversold.yaml  rsi_reversion.yaml  sector_rotation_leader.yaml  trend_pullback_rebound.yaml
strategies/custom/: README.md
tests/integration/: test_backtest_reference.py  test_cli_smoke.py  test_full_loop.py
tests/unit/: test_akshare_adapter.py  test_alpha_factory.py  test_analyzer.py  test_backtest.py  test_benchmark.py  test_cli_main.py  test_config.py  test_critic.py  test_data_cache.py  test_data_manager.py  test_demo.py  test_dsa_adapter.py  test_evaluator.py  test_evolution.py  test_exit_optimizer.py  test_factor_command.py  test_factor_store.py  test_generator.py  test_llm_client.py  test_meta_learner.py  test_models.py  test_mutator.py  test_optimize_cli_spaces.py  test_param_optimizer.py  test_pattern_library.py  test_pipeline.py  test_playbook.py  test_portfolio.py  test_regime.py  test_reporter.py  test_research_advice.py  test_research_agent_features.py  test_research_log.py  test_research_log_exports.py  test_sampler.py  test_sandbox.py  test_serializer.py  test_strategy_draft.py  test_strategy_parser.py  test_strategy_store.py  (+7 more)
(+23 files in other folders)
